test/error/error.input079.zc
Duplicate case value on line 6
